<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_news">Top News</string>
    <string name="categories">Categories</string>
    <string name="saved_news">Saved News</string>

    <!-- News List -->
    <string name="news_article_title">기사 제목</string>
    <string name="news_article_writer">작가 이름</string>
    <string name="news_article_time">업로드 시간</string>
    <string name="news_article_content">기사 내용</string>

    <!-- Categories List -->
    <string name="categories_list_header">Choose a category to start reading</string>
    <string name="categories_list_name">Category - %s</string>
</resources>