<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/newsListFragment">

    <fragment
        android:id="@+id/newsListFragment"
        android:name="com.hs.newsapp.ui.newsList.NewsListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_news_list">
        <action
            android:id="@+id/action_newsListFragment_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/newsDetailFragment"
        android:name="com.hs.newsapp.ui.newsDetail.NewsDetailFragment"
        android:label="fragment_news_detail"
        tools:layout="@layout/fragment_news_detail" />
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.hs.newsapp.ui.categories.CategoriesFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_categoriesFragment_to_newsListFragment"
            app:destination="@id/newsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/savedNewsListFragment"
        android:name="com.hs.newsapp.ui.saved.SavedNewsListFragment"
        android:label="@string/saved_news"
        tools:layout="@layout/fragment_saved_news_list" >
        <action
            android:id="@+id/action_savedNewsListFragment_to_newsDetailFragment"
            app:destination="@id/newsDetailFragment" />
    </fragment>
</navigation>